Fixed viewports as form element was overlapping, added another section called future features to README.md and cleaned up files and filepaths

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,22 +26,24 @@
   padding-left: 0;
 }
 
-.list-inline > ul, * {
+.list-inline > ul,
+* {
   padding-left: 0;
 }
 #socials {
   display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-items: center;
-    justify-content: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .list-inline-item {
   display: ruby-text;
-    padding-left: 0px;
+  padding-left: 0px;
 }
-.list-inline, span {
+.list-inline,
+span {
   font-family: "Poppins", "Sans-Serif";
   text-align: center;
   padding-right: 10px;
@@ -66,10 +68,10 @@ h3 {
 }
 
 .footer {
- bottom: 0;
- height: 50px;
- margin-top: 2px;
- background-color: #db324d;
+  bottom: 0;
+  height: 50px;
+  margin-top: 2px;
+  background-color: #db324d;
 }
 
 /*-------Footer Text-----*/
@@ -154,12 +156,11 @@ a {
 
 #instructionsButton {
   background-color: #a7c957;
-  
 }
 
 button#instructionsButton {
   margin-top: 15px;
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 .button,
 #instructionsButton {
@@ -180,7 +181,7 @@ button#instructionsButton {
 
 #how-to-play {
   display: none;
-  background-color: #ceaf3e ;
+  background-color: #ceaf3e;
 }
 
 .light {
@@ -200,7 +201,8 @@ button#instructionsButton {
   background-color: #ef8354;
 }
 
-input, textarea {
+input,
+textarea {
   cursor: text;
   width: 200px;
 }
@@ -209,13 +211,12 @@ input#name {
   width: 135px;
 }
 
-input#email{
+input#email {
   width: 135px;
-
 }
 
 label {
-  font-weight: 600; 
+  font-weight: 600;
   color: black;
 }
 
@@ -228,7 +229,7 @@ label {
   border-radius: 4px;
   border: none;
   padding-left: 6px;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #send-btn:hover {
@@ -236,22 +237,42 @@ label {
 }
 
 /*--------Media Queries------ */
-
-/*--Small devices ( less than 576px)--*/
-@media (max-width: 576px) { 
-  body{
-    margin-right: 0px;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
+/*-- Extra Small devices (portrait phones, 576px and less--*/
+@media (max-width: 575.98px) {
+  .playground {
+    width: 280px;
   }
 
-  .playground{
-    width: 320px;
+  .grid-container {
+    display: grid;
+    column-gap: 10px;
+    row-gap: 10px;
+    grid-template-columns: 86px 87px 95px;
+    padding: 10px;
+    align-content: center;
+    justify-content: center;
+    margin: auto;
   }
 
-  .square{
-    width: 90px;
-    height: 90px;
+  .square {
+    width: 70px;
+    height: 70px;
+  }
+
+  #outer-form {
+    width: 280px;
+  }
+}
+/*--Small devices (landscape phones, 576px and up)--*/
+@media (min-width: 576px) {
+  .grid-container {
+    width: 400px;
+  }
+}
+
+/*--// Medium devices (tablets, 768px and up)--*/
+@media (min-width: 768px) {
+  .grid-container {
+    width: 450px;
   }
 }
